# phishlens-tr

./: .dockerignore  .env.example  .flake8  .gitignore  404.html  ASYNC_MIGRATION.md  Dockerfile  LICENSE  MANIFEST.in  README.md  app.py  docker-compose.yml  index.html  main.py  mkdocs.yml  phishlens.py  publish.ps1  publish.sh  pyproject.toml  requirements.txt  run.ps1  run.sh  sitemap.xml
.github/workflows/: docs.yml  main.yml  weekly_stats.yml
.streamlit/: config.toml
RICH_MIGRATION/: index.html
VIDEO_PROMPT/: index.html
api/: index.html
api-referansi/: index.html
assets/: .gitkeep  stats.json
contributing/: index.html
docs/: RICH_MIGRATION.md  VIDEO_PROMPT.md  api-referansi.md  api.md  contributing.md  index.md  installation.md  istatistikler.md  usage.md
docs/wiki/: Kurulum.md  Ozellikler.md  Yapilandirma.md
installation/: index.html
istatistikler/: index.html
scripts/: update_readme_stats.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/RICH_MIGRATION/: index.html
site/VIDEO_PROMPT/: index.html
site/api/: index.html
site/api-referansi/: index.html
site/contributing/: index.html
site/installation/: index.html
site/istatistikler/: index.html
tests/: __init__.py  conftest.py  test_analysis.py  test_db.py  test_eml.py  test_emotion_risk.py  test_file_log.py  test_phishlens.py  test_reporter.py  test_rules.py  test_scanner.py  test_threat_feeds.py  test_url_heuristics.py
usage/: index.html
wiki/: CLI-Referansi.md  Home.md  Kurulum.md  README.md  Sorun-Giderme.md  _Sidebar.md
(+31 files in other folders)
